--- a/BarCodeSystem/BarCodeSystem.csproj
+++ b/BarCodeSystem/BarCodeSystem.csproj
@@ -31,8 +31,8 @@
     <PublisherName>FreeStyle</PublisherName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>1</ApplicationRevision>
-    <ApplicationVersion>1.6.17.1</ApplicationVersion>
+    <ApplicationRevision>6</ApplicationRevision>
+    <ApplicationVersion>1.6.30.6</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -133,6 +133,12 @@
     <Compile Include="BasicFile\QualitySort\QualitySort_Window.xaml.cs">
       <DependentUpon>QualitySort_Window.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ProductDispatch\FlowCardClean\FlowCardClean_Page.xaml.cs">
+      <DependentUpon>FlowCardClean_Page.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ProductDispatch\FlowCardDistribute\FlowCardDistribute_Page.xaml.cs">
+      <DependentUpon>FlowCardDistribute_Page.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ProductDispatch\FlowCardReport\FlowCardQualityIssues_Window.xaml.cs">
       <DependentUpon>FlowCardQualityIssues_Window.xaml</DependentUpon>
     </Compile>
@@ -184,6 +190,7 @@
     <Compile Include="PublicClass\DatabaseEntity\FlowCardSubLists.cs" />
     <Compile Include="PublicClass\DatabaseEntity\OrgInfoList.cs" />
     <Compile Include="PublicClass\DatabaseEntity\QualitySortList.cs" />
+    <Compile Include="PublicClass\DatabaseEntity\TechRouteImportList.cs" />
     <Compile Include="PublicClass\DatabaseEntity\WorkTeamMemberLists.cs" />
     <Compile Include="PublicClass\HelperClass\EncodeHelper.cs" />
     <Compile Include="PublicClass\HelperClass\GridHelper.cs" />
@@ -229,6 +236,12 @@
     </Compile>
     <Compile Include="TechRoute\TechRoute\TechRouteCheckPerson_Window.xaml.cs">
       <DependentUpon>TechRouteCheckPerson_Window.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TechRoute\TechRoute\TechRouteImportError_Windows.xaml.cs">
+      <DependentUpon>TechRouteImportError_Windows.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TechRoute\TechRoute\TechRouteImport_Window.xaml.cs">
+      <DependentUpon>TechRouteImport_Window.xaml</DependentUpon>
     </Compile>
     <Compile Include="TechRoute\TechRoute\TechRouteItemList_Window.xaml.cs">
       <DependentUpon>TechRouteItemList_Window.xaml</DependentUpon>
@@ -454,6 +467,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ProductDispatch\FlowCardClean\FlowCardClean_Page.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ProductDispatch\FlowCardDistribute\FlowCardDistribute_Page.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ProductDispatch\FlowCardReport\FlowCardQualityIssues_Window.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -533,6 +554,14 @@
     <Page Include="TechRoute\TechRoute\TechRouteCheckPerson_Window.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TechRoute\TechRoute\TechRouteImportError_Windows.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="TechRoute\TechRoute\TechRouteImport_Window.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="TechRoute\TechRoute\TechRouteItemList_Window.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -661,6 +690,13 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\save.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\cancel.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\person_add.ico" />
+    <Resource Include="Images\person_remove.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
